--- a/rsc/print.css
+++ b/rsc/print.css
@@ -70,3 +70,6 @@ body
 
 #entry p.tacenter
 {text-align:center;}
+
+.taright
+{text-align:right;}
